--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<i class="fa-solid fa-face-smile"></i>
+					<span class="icon solid major fa-smile"></span>
 					<h1>Hi, I'm <strong>Arman Tavana</strong><br />
 					Welcome to my website.</h1>
 					<ul class="actions special">
