--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<p>I am a full stack data scientist</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/Arman_Tavana.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/Arman_Tavana.jpg" width="300" height="600" alt="" /></span>
 						</div>
 					</div>
 				</div>
