--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-smile"></span>
-					<h1>Hi, I'm <strong>Arman Tavana</strong><br />
-					Welcome to my website.</h1>
+					<h1>Hi, I'm <strong>Arman</strong><br />
+					Welcome to my data<br /> science portfolio.</h1>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">About me</a></li>
 					</ul>
@@ -34,10 +34,14 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<p>I am a full stack data scientist</p>
+							<p>I am a full stack data scientist with experience in working at a start-up. I am interested in working with teams to extract meaningful information from data by applying machine learning algorithms to drive business decisions.</p>
+							<p>I graduated cum laude with a Bachelor of Science in Computer Science from St. Lawrence University where I was also a student athlete. I briefly worked as a full stack developer where I built the backend and frontend for a fully interactive website.</p>
+							<p>I am currently pursuing a masters degree in data science <a href= 'https://www.usfca.edu/arts-sciences/graduate-programs/data-science'>(MSDS)</a> at the University of San Francisco. I also work at <a href="https://www.subwifi.com">SubWiFi</a> as a product data scientist (intern) where I use machine learning algorithms and experimentation to improve engagement on the app.<p>
+							<a href="ARMAN_TAVANA_2022_RESUME.pdf" class="button scrolly" download>Resume</a>
+							<p>Please find my projects down below.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/Arman_Tavana.jpg" width="300" height="600" alt="" /></span>
+							<span class="image fit"><img src="images/Arman_Tavana.jpg" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -48,25 +52,16 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
-							</ul>
-						</div>
-						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Torture the data,<br />
+								and it will confess to anything.</h2>
+								<p>- Ronald Coase</p>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
 						</div>
 					</div>
+					<ul class="actions special">
+						<li><a href="#three" class="button scrolly">My Projects</a></li>
+					</ul>
 				</div>
 			</section>
 
@@ -74,18 +69,9 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>Real World Projects</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
 					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 							<h3>Magna feugiat lorem</h3>
@@ -95,11 +81,21 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img width=100 height=220 src="images/rs.jpg" alt="" /></span>
+							<h3>City Recommendation</h3>
+							<p>A recommendation system to recommend cities to travelers based on implicit ratings.<br />
+							(Pytorch, Pandas, Matrix Factorization, Neural Networks)</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/armantavanaa/Implicit_Rating_Prediction" class="button">More</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img width=100 height=220 src="images/fd.jpg" alt="" /></span>
+							<h3>S.F.F.D. Response Time</h3>
+							<p>An analysis of San Francisco fire department response time versus different factors.<br />
+							(PySpark, Plotly, AWS EMR)</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/armantavanaa/SF_fire_department" class="button">More</a></li>
 							</ul>
 						</div>
 					</div>
@@ -110,12 +106,12 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
+						<h2>Keep in Touch</h2>
 					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button wide primary">Sign Up</a></li>
-						<li><a href="#" class="button wide">Learn More</a></li>
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/armantavana/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/armantavanaa" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="mailto:armantav99@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</section>
@@ -440,15 +436,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 			<section id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Arman Tavana</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
