--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
 					</header>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img width=100 height=220 src="images/ep.jpg" alt="" /></span>
+							<h3>Ecommerce Price Prediction</h3>
+							<p>In this project we are predicting Ecommerce prices during the first coivd outbreak.<br />
+							(Pyspark, spark MLlib, MongoDB, AWS S3)</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/armantavanaa/Ecommerce_price" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
