--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img width=100 height=220 src="images/ep.jpg" alt="" /></span>
 							<h3>Ecommerce Price Prediction</h3>
-							<p>In this project we are predicting Ecommerce prices during the first coivd outbreak.<br />
+							<p>In this project we are predicting Ecommerce goods' prices during the first coivd outbreak.<br />
 							(Pyspark, spark MLlib, MongoDB, AWS S3)</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/armantavanaa/Ecommerce_price" class="button">More</a></li>
