--- a/index.html
+++ b/index.html
@@ -65,8 +65,68 @@
 				</div>
 			</section>
 
-		<!-- Three -->
 			<section id="three" class="main style1 special">
+				<div class="container">
+					<header class="major">
+						<h2>ML Algorithms Implementations <br />
+							from Scratch in Python</h2>
+					</header>
+					<div class="row gtr-150">
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img width=100 height=220 src="images/fs.jpg" alt="" /></span>
+							<h3>Feature Importance</h3>
+							<p>Exploring and implementation of different methods of feature importance</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/armantavanaa/Feature_Importance" class="button">More</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img width=100 height=220 src="images/rf.jpg" alt="" /></span>
+							<h3>Random Forest</h3>
+							<p>Implementation of random forest from scratch.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/armantavanaa/random_forest" class="button">More</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img width=100 height=220 src="images/km.jpg" alt="" /></span>
+							<h3>K-means</h3>
+							<p>Implementation of k-means clustering with k-menas++ centroids from scratch.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/armantavanaa/kmeans_clustering" class="button">More</a></li>
+							</ul>
+						</div>
+						<div class="row gtr-150">
+							<div class="col-4 col-12-medium">
+								<span class="image fit"><img width=100 height=220 src="images/lr.jpg" alt="" /></span>
+								<h3>Linear Regression</h3>
+								<p>Implementation of linear, ridge, and logistic regression from scratch.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/armantavanaa/Linear_regression" class="button">More</a></li>
+								</ul>
+							</div>
+							<div class="col-4 col-12-medium">
+								<span class="image fit"><img width=100 height=220 src="images/tree.jpg" alt="" /></span>
+								<h3>Decision Tree</h3>
+								<p>Implementation of decision tree from scratch.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/armantavanaa/Decision_Tree" class="button">More</a></li>
+								</ul>
+							</div>
+							<div class="col-4 col-12-medium">
+								<span class="image fit"><img width=100 height=220 src="images/nb.jpg" alt="" /></span>
+								<h3>Naive Bayes Classifier</h3>
+								<p>A multinomial naive bayes classifier to predict the sentiment of a movie review</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/armantavanaa/naive_bayes" class="button">More</a></li>
+								</ul>
+							</div>
+					</div>
+				</div>
+			</section>
+
+		<!-- Three -->
+			<section id="four" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Real World Projects</h2>
@@ -104,7 +164,7 @@
 			</section>
 
 		<!-- Four -->
-			<section id="four" class="main style2 special">
+			<section id="five" class="main style2 special">
 				<div class="container">
 					<header class="major">
 						<h2>Keep in Touch</h2>
