--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img width=100 height=220 src="images/rf.jpg" alt="" /></span>
 							<h3>Random Forest</h3>
-							<p>Implementation of random forest from scratch.</p>
+							<p>Implementation of random forest from scratch</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/armantavanaa/random_forest" class="button">More</a></li>
 							</ul>
@@ -91,7 +91,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img width=100 height=220 src="images/km.jpg" alt="" /></span>
 							<h3>K-means</h3>
-							<p>Implementation of k-means clustering with k-menas++ centroids from scratch.</p>
+							<p>Implementation of k-means clustering with k-menas++ centroids from scratch</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/armantavanaa/kmeans_clustering" class="button">More</a></li>
 							</ul>
@@ -100,7 +100,7 @@
 							<div class="col-4 col-12-medium">
 								<span class="image fit"><img width=100 height=220 src="images/lr.jpg" alt="" /></span>
 								<h3>Linear Regression</h3>
-								<p>Implementation of linear, ridge, and logistic regression from scratch.</p>
+								<p>Implementation of linear, ridge, and logistic regression from scratch</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/armantavanaa/Linear_regression" class="button">More</a></li>
 								</ul>
@@ -108,7 +108,7 @@
 							<div class="col-4 col-12-medium">
 								<span class="image fit"><img width=100 height=220 src="images/tree.jpg" alt="" /></span>
 								<h3>Decision Tree</h3>
-								<p>Implementation of decision tree from scratch.</p>
+								<p>Implementation of decision tree from scratch</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/armantavanaa/Decision_Tree" class="button">More</a></li>
 								</ul>
