--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img width=100 height=220 src="images/rs.jpg" alt="" /></span>
 							<h3>City Recommendation</h3>
-							<p>A recommendation system to recommend cities to travelers based on implicit ratings.<br />
+							<p>Built a recommendation system to recommend cities to travelers based on implicit ratings.<br />
 							(Pytorch, Pandas, Matrix Factorization, Neural Networks)</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/armantavanaa/Implicit_Rating_Prediction" class="button">More</a></li>
