--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<p>I am a full stack data scientist with experience in working at a start-up. I am interested in working with teams to extract meaningful information from data by applying machine learning algorithms to drive business decisions.</p>
 							<p>I graduated cum laude with a Bachelor of Science in Computer Science from St. Lawrence University where I was also a student athlete. I briefly worked as a full stack developer where I built the backend and frontend for a fully interactive website.</p>
 							<p>I am currently pursuing a masters degree in data science <a href= 'https://www.usfca.edu/arts-sciences/graduate-programs/data-science'>(MSDS)</a> at the University of San Francisco. I also work at <a href="https://www.subwifi.com">SubWiFi</a> as a product data scientist (intern) where I use machine learning algorithms and experimentation to improve engagement on the app.<p>
-							<a href="ARMAN_TAVANA_2022_RESUME.pdf" class="button scrolly" download>Resume</a>
+							<a href="ARMAN_TAVANA_RESUME.pdf" class="button scrolly" download>Resume</a>
 							<p>Please find my projects down below.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
