--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<p>I am a full stack data scientist with experience in working at start-ups. I am interested in working with teams to extract meaningful information from data by applying machine learning algorithms to drive business decisions.</p>
 							<p>I graduated cum laude with a Bachelor of Science in Computer Science from St. Lawrence University where I was also a student athlete (Tennis). I briefly worked as a full stack developer where I built the backend and frontend for a fully interactive website.</p>
 							<p>I obtained my masters degree in data science <a href= 'https://www.usfca.edu/arts-sciences/graduate-programs/data-science'>(MSDS)</a> at the University of San Francisco in 2022. I am currently working at <a href="https://inuvo.com">Inuvo</a> as a Data Scientist.<p>
-							<a href="ARMAN_TAVANA_RESUME_2024.pdf" class="button scrolly" download>Resume</a>
+							<a href="ARMAN_TAVANA_RESUME.pdf" class="button scrolly" download>Resume</a>
 							<p>Please find my projects down below.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
